--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="callout-btn-box"><a class="btn btn-b btn-round" href="#">Request Custom Program</a></div>
+                <div class="callout-btn-box wow tada"><a class="btn btn-b btn-round" href="#">Request Custom Program</a></div>
               </div>
             </div>
           </div>
@@ -338,7 +338,7 @@
 
 <!--Partners and clients Ens--> 
 <hr class="divider-w">
-        <section class="module bg-light" id="partners">
+        <section class="module" id="partners">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
@@ -350,42 +350,43 @@
             
               <div class="col-md-3  col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_1.jpg" alt="Client Logo"/> </span></div>
                  </div>
               </div>
               <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_2.jpg" alt="Client Logo"/> </span></div>
                  </div>
               </div>
               <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_3.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_4.jpg" alt="Client Logo"/> </span></div>
+                </div>
+              </div>
+              <div class="row multi-columns-row"></div>
+              <div class="col-md-3 col-sm-3 col-xs-6">
+                <div class="features-item">
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_5.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_6.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_8.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
-                <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/press_logo_1.png" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_9.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
             </div>
@@ -394,7 +395,7 @@
 <!--Partners and Clients Ends-->  
 
 <!-- Press Begin-->
-        <section class="module-small p-0">
+        <section class="module-small bg-light p-0">
           <div class="container">
           	<br><br>
           	<div class="row">
