partners/features working responvie, links not added yet

--- a/index.html
+++ b/index.html
@@ -348,45 +348,45 @@
             <div class="row multi-columns-row"></div>
               
             
-              <div class="col-md-3  col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_1.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img class ="features-img" src="assets/Ycenter-img/brand_logo_6.jpg" alt="Client Logo"/> </span></div>
                  </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_2.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img class ="features-img" src="assets/Ycenter-img/brand_logo_5.jpg" alt="Client Logo"/> </span></div>
                  </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_3.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img class ="features-img" src="assets/Ycenter-img/brand_logo_7.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_4.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img class ="features-img" src="assets/Ycenter-img/brand_logo_2.jpg" alt="Client Logo"/> </span></div>
                 </div>
               </div>
               <div class="row multi-columns-row"></div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_5.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img class ="features-img" src="assets/Ycenter-img/tempel_small.png" alt="Client Logo"/></div>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_6.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><img class ="features-img" src="assets/Ycenter-img/brand_logo_6.jpg" alt="Client Logo"/></div>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_8.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><span><img class ="features-img" src="assets/Ycenter-img/tempel_small.png" alt="Client Logo"/></div>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="col-sm-3 col-xs-6">
                 <div class="features-item">
-                  <div class="features-icon"><span><img src="assets/Ycenter-img/brand_logo_9.jpg" alt="Client Logo"/> </span></div>
+                  <div class="features-icon"><img class ="features-img" src="assets/Ycenter-img/tedx_small.png" alt="Client Logo"/></div>
                 </div>
               </div>
             </div>
