map atl image text added

--- a/impact.html
+++ b/impact.html
@@ -32,7 +32,7 @@
 	<div id="main">
 						<div class="inner">
 							<h2 style="text-align: center;">Map</h2>
-							<span class="image main" ><img src="assets/Ycenter-img/map_impact.png" alt="" /></span>
+							<span class="image main" ><img src="assets/Ycenter-img/map_impact.png" alt="Map image" /></span>
 						</div>
 	</div>	
 </div>
