--- a/events.html
+++ b/events.html
@@ -21,11 +21,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicons/apple-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-icon-180x180.png">
-    
-
-
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-icon-180x180.png"> 
     <!--  
     Stylesheets
     =============================================
@@ -55,7 +51,7 @@
         <div class="loader">Loading...</div>
       </div>
 <!-- Navbar Begins -->
-      <nav class="navbar navbar-custom navbar-fixed-top navbar-transparent" role="navigation">
+      <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"></button>
@@ -89,8 +85,7 @@
 <!-- Navbar ends -->
 
 <!-- Slider Begins -->
-      <div class="main">
-        <section class="module bg-dark-60 shop-page-header" data-background="assets/images/shop/product-page-bg.jpg">
+        <section class="module bg-dark-60 mt-50" data-background="assets/images/shop/product-page-bg.jpg">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
@@ -102,9 +97,10 @@
           </div>
         </section>
 <!-- Slider End -->
+<hr class="divider-w">
 
 <!-- Event list Begin -->
-        <section class="module-small">
+        <section class="module-medium">
           <div class="container">
               <h2 class="module-title font-alt">Event List-responsive</h2>
             <form class="row">
@@ -262,7 +258,6 @@
             </div>
           </div>
         </footer>
-      </div>
       <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
     </main>
     <!--  
