--- a/impact.html
+++ b/impact.html
@@ -8,7 +8,7 @@
     Document Title
     =============================================
     -->
-    <title>nav</title>
+    <title>Impact</title>
     <!--
     Stylesheets
     =============================================
@@ -84,7 +84,7 @@
 <!--Statistic Begin-->
           <section class="module-medium bg-light">
             <div id="wrapper" class="divided">
-                    <section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in"  id="first">
+                    <section class="spotlight style4 orient-right content-align-left image-position-center onscroll-image-fade-in"  id="first">
                       
                       <div class="content">
                         <h2>Ycenter Statistics</h2>
