--- a/index.html
+++ b/index.html
@@ -81,37 +81,18 @@
 
 <!-- Navbar ends -->
 
-    <section class="home-section home-full-height home-fade bg-dark-60" id="home" data-background="assets/Ycenter-img/banner1.jpg">
-  		<div class="container-fluid">
+    <section class="home-section home-parallax home-fade home-full-height bg-dark-30" id="home" data-background="assets/ycenter-img/banner2.jpg">
+        <div class="titan-caption">
+          <div class="caption-content">
+            <div class="font-alt mb-30 titan-title-size-2">Hello &amp; welcome</div>
+            <div class="font-alt mb-40 titan-title-size-3">We are Titan</div><a class="section-scroll btn btn-border-w btn-round" href="#about">Learn More</a>
+          </div>
+        </div>
+      </section>
 
-		  <div class="row">
 
-		  	<div class="col-md-6 col-sm-6 col-xs-12">
-			    <div class="ycenter-caption">
-			          <div class="caption-content">
-			            <div class="font-alt mb-10 ycenter-title-size-2">We bring real world context to learning in order to create meaningful learning experiences</div>
-			            <div class="font-alt mb-10 ycenter-title-size-3">Ycenter</div>
-			             <a class="section-scroll btn btn-border-y btn-circle" href="#about"> Explore Product</a>
-			          </div>
-			        </div>
-			  </div>
-
-			  	<!-- Video for Header -
-			  				  <div class="col-md-6 col-sm-6 col-xs-12">
-			  	<div class="ycenter-caption">
-
-				    <iframe width="420" height="315"
-							src="https://www.youtube.com/embed/XGSy3_Czz8k">
-					</iframe> 
-				</div>
-						commented for cliarity for now -->
-		  </div>
-
-		</div>
-</section>
-
-      
-      <section class="module">
+   <div class="main">   
+      <section class="module" id ="about">
    <!-- Summary Begin --> 	
           <div class="container">
             <div class="row">
@@ -122,6 +103,7 @@
             </div>
          
           </div>
+        </div>
       </section>
  <!-- Summary Ends -->
 
@@ -171,7 +153,7 @@
 <!-- Impact End -->
 
 <!--Program Begins-->        
-        <section class="module-extra-small" id="works">
+        <section class="module" id="works">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
@@ -353,7 +335,7 @@
                 </article></li>
           </ul>
         </section>
-        <section class="module-extra-small bg-dark-30">
+        <section class="module-extra-small">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-md-8 col-lg-6 col-lg-offset-2">
@@ -363,7 +345,7 @@
                 </div>
               </div>
               <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="callout-btn-box wow tada"><a class="btn btn-b btn-round" href="#">Request Custom Program</a></div>
+                <div class="callout-btn-box wow tada"><a class="btn btn-y btn-circle" href="#">Request Custom Program</a></div>
               </div>
             </div>
           </div>
