--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Default stylesheets-->
     <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Template specific stylesheets-->
+
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
@@ -82,10 +85,10 @@
 <!-- Navbar ends -->
 
     <section class="home-section home-parallax home-fade home-full-height bg-dark-30" id="home" data-background="assets/ycenter-img/banner2.jpg">
-        <div class="titan-caption">
+        <div class="ycenter-caption">
           <div class="caption-content">
-            <div class="font-alt mb-30 titan-title-size-2">Hello &amp; welcome</div>
-            <div class="font-alt mb-40 titan-title-size-3">We are Titan</div><a class="section-scroll btn btn-border-w btn-round" href="#about">Learn More</a>
+            <div class="font-droid mb-20 ycenter-title-size-2">We bring real world context to learning in order to create meaningful learning experiences</div>
+            <div class="font-droid mb-30 ycenter-title-size-3">YCENTER</div><a class="section-scroll btn btn-y btn-circle" href="#program">Explore Programs</a>
           </div>
         </div>
       </section>
@@ -153,7 +156,7 @@
 <!-- Impact End -->
 
 <!--Program Begins-->        
-        <section class="module" id="works">
+        <section class="module" id="program">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
