the event page slider working

--- a/events.html
+++ b/events.html
@@ -85,22 +85,44 @@
 <!-- Navbar ends -->
 
 <!-- Slider Begins -->
-        <section class="module bg-dark-60 mt-50" data-background="assets/images/shop/product-page-bg.jpg">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6 col-sm-offset-3">
-                <h2 class="module-title font-alt">Slider</h2>
-                <div class="module-subtitle font-serif"> Some text---Despite 6 years of engineering, I found myself ill-prepared to translate my classroom knowledge into skills for real world problem solving. To fill this gap and bring our education closer to the challenges of our world today, we launched Ycenter.
-                Dhairya Pujara Founder, CEO Ycenter.</div>
+        <section class="home-section home-full-height home-fade" id="home">
+        <div class="hero-slider">
+          <ul class="slides">
+            <li class="bg-dark-30 bg-dark" style="background-image:url(assets/Ycenter-img/banner2.jpg);">
+              <div class="titan-caption">
+                <div class="caption-content">
+                  <div class="font-alt mb-30 titan-title-size-1">Hello &amp; welcome</div>
+                  <div class="font-alt mb-40 titan-title-size-4">We anjfn jnhdldsn</div><a class="section-scroll btn btn-border-w btn-round" href="#about">Learn More</a>
+                </div>
               </div>
-            </div>
-          </div>
-        </section>
+            </li>
+            <li class="bg-dark-30 bg-dark"  style="background-image:url(assets/Ycenter-img/pro_1.jpg);">
+              <div class="titan-caption">
+                <div class="caption-content">
+                  <div class="font-alt mb-30 titan-title-size-1">jfkdsjf hjasld hasldk
+                  </div><a class="btn btn-border-w btn-round" href="about">Learn More</a>
+                </div>
+              </div>
+            </li>
+            <li class="bg-dark-30 bg-dark" style="background-image:url(assets/Ycenter-img/banner1.jpg);">
+              <div class="titan-caption">
+                <div class="caption-content">
+                  <div class="font-alt mb-30 titan-title-size-1">We build bramcds.nds that bjjjuild a,sdmbusiness</div>
+                  <div class="font-alt mb-40 titan-title-size-4">We are we the most are</div><a class="section-scroll btn btn-border-w btn-round" href="#about">Learn More</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      
+        
+<div class ="main">            
 <!-- Slider End -->
 <hr class="divider-w">
 
 <!-- Event list Begin -->
-        <section class="module-medium">
+        <section class="module">
           <div class="container">
               <h2 class="module-title font-alt">Event List-responsive</h2>
             <form class="row">
@@ -258,6 +280,7 @@
             </div>
           </div>
         </footer>
+      </div>
       <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
     </main>
     <!--  
