--- a/impact.html
+++ b/impact.html
@@ -117,7 +117,7 @@
   <div class= "container">
   
   <div class="row">  
-  <div class="4u 6u(tablet) 12u$(mobile)">
+  <div class="4u 6u(tablet) 12u(mobile)">
     <div class="square-flip">
       <div class='square' data-image="assets/Ycenter-img/skills4life.jpeg">
       <div class="square-container">
@@ -138,7 +138,7 @@
   </div>
 </div>
 
- <div class="4u 6u(tablet) 12u$(mobile)">
+ <div class="4u 6u(tablet) 12u(mobile)">
   <div class="square-flip">
     <div class='square' data-image="http://titanicthemes.com/files/flipbox/kallyas-bundle.png">
       <div class="square-container">
@@ -159,7 +159,7 @@
 </div>
 
 
-<div class="4u 6u$(tablet) 12u$(mobile)">
+<div class="4u 6u(tablet) 12u(mobile)">
   <div class="square-flip">
     <div class='square' data-image="https://instagram.fotp3-2.fna.fbcdn.net/t51.2885-15/e35/14712096_386502691740262_2357154798815412224_n.jpg?ig_cache_key=MTM2NzU2MzUwNjQ3OTUzOTgxNQ%3D%3D.2">
       <div class="square-container">
