timeline working with header

--- a/ProjectY/impact.html
+++ b/ProjectY/impact.html
@@ -70,7 +70,7 @@
 			<li><a href="#" data-nav-section="benefits">EPIC</a></li>
 			<li><a href="#" data-nav-section="pricing">Blog</a></li>
 		</ul>
-		<h3 class="fh5co-lead">We are everywhere.</h3>
+		<h3 class="fh5co-lead">Connect With Us.</h3>
 		<p class="fh5co-social-icons">
 			<a href="#"><i class="icon-twitter"></i></a>
 			<a href="#"><i class="icon-facebook"></i></a>
