commiting to push, everything working, impact map added, last working version in produsct design folder

--- a/ProjectY/event/index.html
+++ b/ProjectY/event/index.html
@@ -81,13 +81,13 @@
       <li><a href="#" data-nav-section="products">About</a></li>
       <li><a href="#" data-nav-section="pricing">Blog</a></li>
     </ul>
-    <h3 class="fh5co-lead">Connect with us.</h3>
+    <!--<h3 class="fh5co-lead">Connect with us.</h3>
     <p class="fh5co-social-icons">
       <a href="#"><i class="icon-twitter"></i></a>
       <a href="#"><i class="icon-facebook"></i></a>
       <a href="#"><i class="icon-instagram"></i></a>
       <a href="#"><i class="icon-youtube"></i></a>
-    </p>
+    </p>-->
   </div>
   
   <div id="fh5co-menu" class="navbar">
@@ -96,7 +96,7 @@
         <div class="col-md-12">
           <a href="http://y-center.in/EPIC/" target="_blank"><span class="fh5co-nav-no-toggle">EPIC</span></a>
           <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#fh5co-navbar" aria-expanded="false" aria-controls="navbar"><span>Menu</span> <i></i></a>
-          <a href="index.html" class="navbar-brand"><img src="images/icons/apple-touch-icon-57-precomposed.png"></a>
+          <a href="index.html" class="navbar-brand"><img src="../images/icons/apple-touch-icon-57-precomposed.png"></a>
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
            </div>
           
           <div class="col-sm-4 col-md-offset-1">  
-          <div class='filter-container'>
+          <div class='filter-container' style="margin-bottom: 5px;">
           <select id = "ev" class='filter-event form-control' name='Event' data-col='Event'>
                   <option selected="selected">Select Event</option>
                   <option></option>
@@ -171,7 +171,7 @@
         </div>
       </div>
        <div class="col-sm-3">
-        <div class='filter-container'>  
+        <div class='filter-container' style="margin-bottom: 5px;">  
           <select id= "dt" class='filter-event form-control' name='Date' placeholder='Date' data-col='Date'>
                   <option selected="selected">Month</option>
                   <option></option>
@@ -186,7 +186,7 @@
         </div>
       </div>
       <div class="col-sm-3">  
-        <div class='filter-container'>
+        <div class='filter-container' style="margin-bottom: 5px;">
           <input  autocomplete='off' class='filter-event form-control' name='Place' placeholder='Place' data-col='Place'/>
         </div>
       </div>
@@ -210,70 +210,70 @@
               <td>GODAN G77</td>
               <td>GODAN</td>
               <td>Nairobi, Kenya</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>17 July 2017</td>
               <td>Partnership Exchange</td>
               <td>United Nations</td>
                <td>New York, USA</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>15 Sep 2017</td>
               <td>The Coalition</td>
               <td>OML</td>
               <td>Bengaluru, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>               
               <td>21 Sep 2017</td>
               <td>TEDxIITBHU</td>
               <td>IIT BHU</td>
               <td>Varanasi, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>26 Sep 2017</td>
               <td>Bloom box</td>
               <td>KJSomaiya</td>
               <td>Mumbai, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>16 Oct 2017</td>
               <td>Creative Problem Solving</td>
               <td>WeWork</td>
               <td>Mumbai, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>26 Oct 2017</td>
               <td>Guest lecture</td>
               <td>IIT Bombay</td>
               <td>Mumbai, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>27 Oct 2017</td>
               <td>Design-a-thon</td>
               <td>DeshPande Foundation</td>
               <td>Hubli, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>     
             <tr>
               <td>28 Oct 2017</td>
               <td>TEDxMITSG</td>
               <td>MITSG</td>
               <td>Gwalior, India</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             <tr>
               <td>15 Nov 2017</td>
               <td>Meeting The Challenge Of Change</td>
               <td>MISK-UNDP</td>
               <td>Riyadh, Saudi Arabia</td>
-              <td><a href="#">Arrow</a></td>
+              <td><a href="#">More</a></td>
             </tr>
             
           </tbody>
