--- a/ProjectY/timeline.html
+++ b/ProjectY/timeline.html
@@ -70,11 +70,11 @@
 		</ul>
 		<h3 class="fh5co-lead">Connect with Us.</h3>
 		<p class="fh5co-social-icons">
-			<a href="#"><i class="icon-twitter"></i></a>
-			<a href="#"><i class="icon-facebook"></i></a>
-			<a href="#"><i class="icon-instagram"></i></a>
-			<a href="#"><i class="icon-youtube"></i></a>
-		</p>
+      <a href="https://twitter.com/ycenterlearning/"><i class="icon-twitter"></i></a>
+      <a href="#"><i class="icon-facebook"></i></a>
+      <a href="https://www.yooying.com/ycenterlearning/"><i class="icon-instagram"></i></a>
+      <a href="https://www.youtube.com/channel/UCtb_JA2sdiKPU83rwbfTtLQ/"><i class="icon-youtube"></i></a>
+    </p>
 	</div>
 	
 	<div id="fh5co-menu" class="navbar">
